--- a/estilos.css
+++ b/estilos.css
@@ -54,7 +54,7 @@ form {
 }
 
 section {
-  display: flex;
+  /*display: flex;*/
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -74,7 +74,7 @@ h1 {
 
 .cuerpo {
   background-color: #f5f6f7;
-  min-height: 450px;
+  /*min-height: 450px;*/
   text-align: center;
 }
 
@@ -215,7 +215,7 @@ h1 {
   background-size: cover;
   background-position: center;
   border: solid #1b1b32 5px;
-  height: 400px;
+  height: 50%;
   padding: 40px;
 }
 
@@ -426,7 +426,7 @@ h2 {
 }
 
 .footer {
-  min-height: 450px;
+  height: 350px;
 }
 
 .footer-logo {
