--- a/estilos.scss
+++ b/estilos.scss
@@ -491,6 +491,13 @@ h2 {
 
 /*Responsivos*/
 
+@media only screen and (max-width: 767px) {
+    .navbar-brand{
+        display: none;
+    }
+}
+
+
 @media only screen and (min-width: 480px) {
     .imagen {
         grid-template-columns: 1fr, 1fr;
